--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
 			<version>3.0.2</version>
 			<scope>runtime</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>26.0-jre</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
